# UChat

./: .cache_ggshield  .gitignore
client/UChat/: AddContactDialog.cpp  AddContactDialog.h  CMakeLists.txt  ChatConnection.cpp  ChatConnection.h  ChatManager.cpp  ChatManager.h  ChatMessageModel.cpp  ChatMessageModel.h  ChatUIManager.cpp  ChatUIManager.h  ContactManager.cpp  ContactManager.h  ConversationItemWidget.cpp  ConversationItemWidget.h  HttpMgr.cpp  HttpMgr.h  MessageDelegate.cpp  MessageDelegate.h  Singleton.cpp  Singleton.h  TcpClient.cpp  TcpClient.h  global.cpp  global.h  logindialog.cpp  logindialog.hpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resource.qrc  timerbutton.cpp  timerbutton.hpp
client/UChat/config/: config.ini
client/UChat/resource/style/: logindialog.qss  logindialog.qss.txt  mainwindow.qss  mainwindow.qss.txt
client/UChat/style/: logindialog.qss
server/: README.md  schema.sql
server/.cursor/rules/: uchat-server.mdc
server/CaptchaServer/: config.js  config.json  const.js  email.js  package.json  proto.js  server.js
server/ChatServer/: .gitignore  CMakeLists.txt  InterChat.proto  TcpMessage.json  chatserver.proto  config.ini  im.proto  main.cpp  vcpkg.json
server/ChatServer/src/: ChannelPool.cpp  ChannelPool.h  ChatApiService.cpp  ChatApiService.h  ChatServer.cpp  ChatServer.h  ConnectionManager.cpp  ConnectionManager.h  DeliverApiClient.cpp  DeliverApiClient.h  GrpcStubPool.h  InterChatClient.cpp  InterChatClient.h  InterChatService.cpp  InterChatService.h  MQGatewayClient.cpp  MQGatewayClient.h  MessageHandler.cpp  MessageHandler.h  NewChatServer.cpp  NewChatServer.h  PresenceClient.cpp  PresenceClient.h  RedisConnPool.h  RedisMgr.cpp  RedisMgr.h  ServicePool.cpp  ServicePool.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  TcpConnection.cpp  TcpConnection.h  UserServiceClient.cpp  UserServiceClient.h  error_codes.h  util.h
server/ChatServer/test/: CMakeLists.txt  ChatApiIntegrationTest.cpp  ChatApiQpsBenchmark.cpp  run_multiprocess_benchmark.sh
server/GateServer/: .gitignore  CMakeLists.txt  config.ini  im.proto  main.cpp  message.proto  user_service.proto  userserver.proto  vcpkg.json
server/GateServer/protoc_generated/: im.grpc.pb.cc  im.grpc.pb.h  im.pb.cc  im.pb.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  userserver.grpc.pb.cc  userserver.grpc.pb.h  userserver.pb.cc  userserver.pb.h
server/GateServer/src/: CServer.cpp  CServer.h  CaptchaGrpcClient.cpp  CaptchaGrpcClient.h  ChatApiClient.cpp  ChatApiClient.h  ChatControlApiService.cpp  ChatControlApiService.h  ChatSession.cpp  ChatSession.h  ChatTunnelService.cpp  ChatTunnelService.h  ConfigMgr.cpp  ConfigMgr.h  DeliverApiService.cpp  DeliverApiService.h  GatewayServer.cpp  GatewayServer.h  GrpcStubPool.cpp  GrpcStubPool.h  HttpConnection.cpp  HttpConnection.h  IOServicePool.cpp  IOServicePool.h  Logger.cpp  Logger.h  LogicSystem.cpp  LogicSystem.h  MysqlConnPool.cpp  MysqlConnPool.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisConnPool.cpp  RedisConnPool.h  RedisMgr.cpp  RedisMgr.h  RequestHandlers.cpp  RequestHandlers.h  (+18 more)
server/GateServer/src/models/: UserInfo.cpp  UserInfo.h
server/GateServer/test/: CMakeLists.txt  Test.cpp  TestIsValid.h  TestLogger.h  TestMysql.h  TestRedisMgr.h
server/MQGateway/: .gitignore  README.md  config.yaml  go.mod  main.go
server/MQGateway/internal/config/: config.go
server/MQGateway/internal/mq/: rabbitmq.go
server/MQGateway/internal/service/: mqgateway.go
server/StatusServer/: .gitignore  CMakeLists.txt  StatusServer.proto  config.ini  main.cpp  vcpkg.json
server/StatusServer/src/: ConfigMgr.cpp  ConfigMgr.h  Logger.h  Singleton.h  StatusServer.cpp  StatusServer.h  util.h
server/UserServer/: .gitignore  CMakeLists.txt  config.ini  main.cpp  mqgateway.proto  schema.sql  statusserver.proto  user_service.proto  userserver.proto  vcpkg.json
server/UserServer/Tests/: CMakeLists.txt  GrpcClient.cpp  GrpcClient.h  StressTest.cpp
server/UserServer/src/: Auth.cpp  Auth.h  ConfigMgr.h  MQGatewayClient.cpp  MQGatewayClient.h  MysqlConnPool.cpp  MysqlConnPool.h  MysqlMgr.cpp  MysqlMgr.h  RedisConnPool.cpp  RedisConnPool.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserServer.cpp  UserServer.h  util.h
server/VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package.json  proto.js  redis.js  server.js
server/docs/: CLIENT_API.md
